# nixconfig

./: .envrc  .gitignore  .luarc.json  .sops.yaml  Dockerfile  README.md  arion-compose.nix  arion-pkgs.nix  configuration.nix  dex.nix  docker-compose.yaml  downloader.nix  emacs.nix  emulation.nix  files.nix  flake.nix  git.nix  graphical.nix  hardware-configuration.nix  neovim.nix  nixos-install.md  nordvpn.nix  outputs.nix  package.json  packages.nix  pnpm-lock.yaml  scratch  services.nix  tmux.nix  tv.nix  zsh.nix
briefs/: anki.tsv  briefs-canary-2min.tsv  briefs-canary-3min.tsv  briefs-canary.tsv  briefs-espanso.txt  briefs-raw.tsv  briefs.tsv  briefs.txt  filter.js  generate-briefs.py  import-anki.js  import-espanso.js  import-espanso.py  import-qmk.js  import-zmk.js  training.txt  words.txt
dotfiles/: aliases.sh
home/: alacritty.nix  aliases.sh  default.nix  desktop.nix  dlip.json  dual.kbd  emacs.nix  emulation.nix  espanso.yaml  fonts.nix  gamedev.nix  gaming.nix  git.nix  gpg-agent.nix  graphical.nix  homelayers.kbd  homemods.kbd  kmonad.kbd  leftwm.nix  linux-desktop.nix  linux-graphical.nix  linux.nix  lsp.nix  macos.nix  media.nix  mime.nix  nix-on-droid.nix  nixvim.nix  packages.nix  prusaslicer.ini  readline.nix  rofi.nix  rofi.theme  scripts.nix  services.nix  session.nix  starship.nix  termite.nix  tmux.nix  twosided.kbd  (+6 more)
k8s/: README.md  default.nix  traefik.yaml
keymaps/: README.md
overlays/: default.nix
overlays/pythonPackages/: default.nix  pyproject.toml
pkgs/: default.nix
scripts/: cbz  clip-arg  easyocr  gn  he  helix-open  jsontoyaml  (+26 more)
(+589 files in other folders)
