[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Dane Lipscombe <dane@lipscombe.com.au>"]

[tool.poetry.dependencies]
python = "^3.9"
shirah-reader = "^1.0.0"
adafruit-nrfutil = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
